--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -45,6 +45,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="../../../templates/contact.html">Contact Us</a>
               </li>
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">{{ request.user.first_name }}</a>
+                    </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                         </li>
+                {% endif %}
             </ul>
           </div>
         </div>
