--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Login - StandBlog</title>
+  	<title>Register - StandBlog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -24,32 +24,35 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
-                        <h3 class="mb-4 text-center">Login Page</h3>
-                        <form action="#" class="signin-form" method="post">
+                        <h3 class="mb-4 text-center">Register Page</h3>
+                        <form action="#" class="signup-form" method="post">
                             {% csrf_token %}
                             <div class="form-group">
                                 <input type="text" class="form-control" name="username" placeholder="Username" required>
                             </div>
                             <div class="form-group">
-                                <input id="password-field" type="password" class="form-control" name="password" placeholder="Password" required>
+                                <input type="text" class="form-control" name="name" placeholder="name" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="email" placeholder="email" required>
+                            </div>
+                            <div class="form-group">
+                                <input id="password-field" type="password" class="form-control" name="password1" placeholder="Password" required>
                                 <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
+                                <input id="password-field" type="password" class="form-control" name="password2" placeholder="Confirm Password" required>
+                                <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
-                            <div class="form-group d-md-flex">
-                                <div class="w-50">
-                                    <label class="checkbox-wrap checkbox-primary">Remember Me
-                                        <input type="checkbox" name="remember" checked>
-                                        <span class="checkmark"></span>
-                                        <a href="/account/register" class="href">
-                                        Register
-                                        </a>
-                                    </label>
-
-                                </div>
+                            <div class="form-group">
+                                <button type="submit" class="form-control btn btn-primary submit px-3">register</button>
                             </div>
                         </form>
+                        <div style="text-align: center">
+                            <a style="text-align: center" href="/account/login">
+                                login
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
