--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -49,9 +49,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">{{ request.user.first_name }}</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/account/logout">Logout</a>
+                    </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">Login</a>
+                            <a class="nav-link" href="/account/login">Login</a>
+                         </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="/account/register">Register</a>
                          </li>
                 {% endif %}
             </ul>
