fix login/register of homepage navbar

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -37,8 +37,8 @@
                             <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
                             </div>
-                            <div class="form-group d-md-flex">
-                                <div class="w-50">
+                            <div style="display: flex; align-items: center;" class="form-group d-md-flex">
+                                <div style="display: flex; align-items: center;" class="w-50">
                                     <label class="checkbox-wrap checkbox-primary">Remember Me
                                         <input type="checkbox" name="remember" checked>
                                         <span class="checkmark"></span>
