--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -46,9 +46,16 @@
                 <a class="nav-link" href="../../../templates/contact.html">Contact Us</a>
               </li>
                 {% if request.user.is_authenticated %}
-                    <li class="nav-item">
+                    {% if request.user.first_name %}
+                        <li class="nav-item">
                         <a class="nav-link" href="#">{{ request.user.first_name }}</a>
                     </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">{{ request.user.username }}</a>
+                        </li>
+                    {% endif %}
+
                     <li class="nav-item">
                         <a class="nav-link" href="/account/logout">Logout</a>
                     </li>
