--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -57,13 +57,13 @@
                     {% endif %}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/account/logout">Logout</a>
+                        <a class="nav-link" href="{% url 'account:logout' %}">Logout</a>
                     </li>
                     {% else %}
                         <li style="display: flex; align-items: center; justify-content: center" class="nav-item">
-                            <a class="nav-link" href="/account/login">Login</a>
+                            <a class="nav-link" href="{% url 'account:login' %}">Login</a>
                             <p style="margin-top: 2px">/</p>
-                            <a class="nav-link" href="/account/register">Register</a>
+                            <a class="nav-link" href="{% url 'account:register' %}">Register</a>
                          </li>
                     <li class="nav-item">
 
