adding article category

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -86,7 +86,7 @@
             <div class="item-content">
               <div class="main-content">
                 <div class="meta-category">
-                  <span>Nature</span>
+                  <span>{{ article.category.first }}</span>
                 </div>
                 <a href="../../../templates/post-details.html"><h4>{{ article.title }}</h4></a>
                 <ul class="post-info">
